add: dashboard design

--- a/efak-web/src/main/resources/i18n/messages_zh_CN.properties
+++ b/efak-web/src/main/resources/i18n/messages_zh_CN.properties
@@ -4,6 +4,35 @@ kafka.eagle.dataspace.dashboard=\u96C6\u7FA4\u603B\u89C8
 kafka.eagle.dataspace.tv=\u76D1\u63A7\u5927\u5C4F
 kafka.eagle.dataspace.welcome=\u6B22\u8FCE\u8FDB\u5165Kafka Eagle\u96C6\u7FA4\u603B\u89C8\u9875\u9762
 kafka.eagle.dataspace.search=\u5FEB\u901F\u641C\u7D22
+kafka.eagle.dataspace.dashboard.broker=\u96C6\u7FA4\u8282\u70B9
+kafka.eagle.dataspace.dashboard.view=\u67E5\u770B
+kafka.eagle.dataspace.dashboard.topics=\u4E3B\u9898\u603B\u91CF
+kafka.eagle.dataspace.dashboard.consumers=\u6D88\u8D39\u8005\u6570
+kafka.eagle.dataspace.dashboard.messagein=\u6D88\u606F\u5199\u5165\u6761\u6570
+kafka.eagle.dataspace.dashboard.messagein.day=\u5929
+kafka.eagle.dataspace.dashboard.messagein.weekly=\u5468
+kafka.eagle.dataspace.dashboard.messagein.month=\u6708
+kafka.eagle.dataspace.dashboard.messagein.doc=\u7528\u4E8E\u5EA6\u91CF\u76D1\u63A7\u6D41\u5165\u6D88\u606F\uFF0C\u6709\u52A9\u4E8E\u8BC6\u522B\u74F6\u9888\u5E76\u4F18\u5316\u6027\u80FD
+kafka.eagle.dataspace.dashboard.topic.logsize=\u6D88\u606F\u603B\u8BB0\u5F55\u6570
+kafka.eagle.dataspace.dashboard.topic.logsize.doc=\u7528\u4E8E\u5EA6\u91CF\u76D1\u63A7\u6BCF\u5929\u4E3B\u9898\u5199\u5165\u7684\u603B\u6761\u6570\uFF0C\u6709\u52A9\u4E8E\u9884\u6D4B\u672A\u6765\u7684\u6570\u636E\u589E\u957F\u8D8B\u52BF
+kafka.eagle.dataspace.dashboard.capacity=\u96C6\u7FA4\u5BB9\u91CF
+kafka.eagle.dataspace.dashboard.capacity.used=\u5DF2\u4F7F\u7528
+kafka.eagle.dataspace.dashboard.capacity.total=\u603B\u5BB9\u91CF
+kafka.eagle.dataspace.dashboard.capacity.user.rate=\u4F7F\u7528\u7387
+kafka.eagle.dataspace.dashboard.topic.title=\u6D3B\u8DC3\u4E3B\u9898\u5360\u6BD4\u91CF
+kafka.eagle.dataspace.dashboard.topic.active=\u6D3B\u8DC3\u4E3B\u9898\u91CF
+kafka.eagle.dataspace.dashboard.topic.standby=\u975E\u6D3B\u8DC3\u4E3B\u9898\u91CF
+kafka.eagle.dataspace.dashboard.topic.table=\u6D88\u606F\u524D10\u540D
+kafka.eagle.dataspace.dashboard.topic.table.name=\u4E3B\u9898\u540D\u79F0
+kafka.eagle.dataspace.dashboard.topic.table.logsize=\u6D88\u606F\u6570\u91CF
+kafka.eagle.dataspace.dashboard.topic.table.logsize.doc=\u6309\u6570\u91CF\u964D\u5E8F
+kafka.eagle.dataspace.dashboard.topic.table.capacity=\u6D88\u606F\u5BB9\u91CF
+kafka.eagle.dataspace.dashboard.topic.table.capacity.doc=\u6309\u5BB9\u91CF\u964D\u5E8F
+kafka.eagle.dataspace.dashboard.topic.table.bytein=\u6D88\u606F\u5199\u5165
+kafka.eagle.dataspace.dashboard.topic.table.bytein.doc=\u6309\u5199\u5165\u964D\u5E8F
+kafka.eagle.dataspace.dashboard.topic.table.byteout=\u6D88\u606F\u8BFB\u53D6
+kafka.eagle.dataspace.dashboard.topic.table.byteout.doc=\u6309\u8BFB\u53D6\u964D\u5E8F
+
 
 
 # Topics
