add: create db with startup

--- a/efak-web/src/main/resources/i18n/messages_zh_CN.properties
+++ b/efak-web/src/main/resources/i18n/messages_zh_CN.properties
@@ -2,7 +2,7 @@
 kafka.eagle.dataspace=\u6570\u636E\u7A7A\u95F4
 kafka.eagle.dataspace.dashboard=\u96C6\u7FA4\u603B\u89C8
 kafka.eagle.dataspace.tv=\u76D1\u63A7\u5927\u5C4F
-kafka.eagle.dataspace.welcome=\u6B22\u8FCE\u8FDB\u5165Kafka Eagle\u96C6\u7FA4\u603B\u89C8\u9875\u9762
+kafka.eagle.dataspace.welcome=\u6B22\u8FCE\u8FDB\u5165Kafka\u7BA1\u63A7\u5E73\u53F0\u96C6\u7FA4\u603B\u89C8\u9875\u9762
 kafka.eagle.dataspace.search=\u5FEB\u901F\u641C\u7D22
 kafka.eagle.dataspace.dashboard.broker=\u96C6\u7FA4\u8282\u70B9
 kafka.eagle.dataspace.dashboard.view=\u67E5\u770B
