add: efak welcome view

--- a/efak-web/src/main/resources/i18n/messages_zh_CN.properties
+++ b/efak-web/src/main/resources/i18n/messages_zh_CN.properties
@@ -1,3 +1,8 @@
+# Welcome
+kafka.eagle.welcome.title=\u6B22\u8FCE\u8FDB\u5165Kafka Eagle\u96C6\u7FA4\u7BA1\u7406\u5E73\u53F0
+kafka.eagle.welcome.title.sub=\u5728\u4F7F\u7528\u96C6\u7FA4\u7BA1\u7406\u5E73\u53F0\u4E4B\u524D\u9700\u8981\u521B\u5EFAKafka\u96C6\u7FA4\u4FE1\u606F
+kafka.eagle.welcome.title.button=\u7ACB\u5373\u8FDB\u5165<i class="btn-icon-append" data-feather="arrow-right-circle"></i>
+
 # Dashboard
 kafka.eagle.dataspace=\u6570\u636E\u7A7A\u95F4
 kafka.eagle.dataspace.dashboard=\u96C6\u7FA4\u603B\u89C8
