--- a/efak-web/src/main/resources/i18n/messages_zh_CN.properties
+++ b/efak-web/src/main/resources/i18n/messages_zh_CN.properties
@@ -1,7 +1,13 @@
 # Welcome
 kafka.eagle.welcome.title=\u6B22\u8FCE\u8FDB\u5165Kafka Eagle\u96C6\u7FA4\u7BA1\u7406\u5E73\u53F0
-kafka.eagle.welcome.title.sub=\u5728\u4F7F\u7528\u96C6\u7FA4\u7BA1\u7406\u5E73\u53F0\u4E4B\u524D\u9700\u8981\u521B\u5EFAKafka\u96C6\u7FA4\u4FE1\u606F
 kafka.eagle.welcome.title.button=\u7ACB\u5373\u8FDB\u5165<i class="btn-icon-append" data-feather="arrow-right-circle"></i>
+
+# Cluster
+kafka.eagle.clusters.manage.home=\u9996\u9875
+kafka.eagle.clusters.manage.home.sub=\u96C6\u7FA4\u7BA1\u7406
+kafka.eagle.clusters.manage.home.sub.desc=1. \u96C6\u7FA4\u5217\u8868\u5C55\u793A\u5F53\u524D\u8D26\u53F7\u53EF\u7BA1\u7406\u7684\u96C6\u7FA4\u5217\u8868\uFF0C\u82E5\u5B58\u5728\u5F02\u5E38\u670D\u52A1\uFF0C\u5219\u96C6\u7FA4\u663E\u793A\u5F02\u5E38\u72B6\u6001\u3002<br/>2. \u521B\u5EFA\u96C6\u7FA4\uFF0C\u9700\u8981\u63D0\u524D\u51C6\u5907\u597DKafka\u8282\u70B9\uFF08\u673A\u5668\uFF09\u4FE1\u606F\uFF0C\u5982\u679C\u5DF2\u7ECF\u521B\u5EFA\u597D\u96C6\u7FA4\u8BF7\u70B9\u51FB\u96C6\u7FA4\u540D\u79F0\uFF0C\u8FDB\u5165\u8BE6\u60C5\u9875\u9762\u3002
+kafka.eagle.clusters.manage.create=\u521B\u5EFA\u96C6\u7FA4
+kafka.eagle.clusters.manage.create.tr=<th>\u96C6\u7FA4\u540D\u79F0</th><th>\u72B6\u6001</th><th>\u8282\u70B9\u6570</th><th>\u66F4\u65B0\u65E5\u671F</th><th>KRaft</th><th>\u64CD\u4F5C</th>
 
 # Dashboard
 kafka.eagle.dataspace=\u6570\u636E\u7A7A\u95F4
