add: node table desc

--- a/efak-web/src/main/resources/i18n/messages_zh_CN.properties
+++ b/efak-web/src/main/resources/i18n/messages_zh_CN.properties
@@ -38,6 +38,7 @@ kafka.eagle.clusters.manage.add.batch.module=\u4E0B\u8F7D\u6A21\u7248\u6587\u4EF
 kafka.eagle.clusters.manage.add.batch.module.download=<i class="btn-icon-append" data-feather="file-text"></i> \u4E0B\u8F7D\u6A21\u7248
 kafka.eagle.clusters.manage.add.batch.node=\u6279\u91CF\u5BFC\u5165 Kafka \u8282\u70B9
 kafka.eagle.clusters.manage.add.batch.node.import=\u6309\u6A21\u7248\u683C\u5F0F\u5BFC\u5165
+kafka.eagle.clusters.manage.add.node.tr=<th>\u8282\u70B9ID</th><th>\u8282\u70B9IP</th><th>\u8282\u70B9PORT</th><th>\u8282\u70B9JMX_PORT</th><th>\u66F4\u65B0\u65F6\u95F4</th><th>\u64CD\u4F5C</th>
 
 
 
