--- a/efak-web/src/main/resources/i18n/messages_zh_CN.properties
+++ b/efak-web/src/main/resources/i18n/messages_zh_CN.properties
@@ -21,7 +21,6 @@ kafka.eagle.clusters.manage.create.name=\u96C6\u7FA4\u540D\u79F0
 kafka.eagle.clusters.manage.create.name.test=Kafka\u6D4B\u8BD5\u96C6\u7FA4
 kafka.eagle.clusters.manage.create.name.placeholder=\u8BF7\u8F93\u5165\u96C6\u7FA4\u540D\u79F0
 kafka.eagle.clusters.manage.create.desc=1. \u8F93\u5165\u96C6\u7FA4\u540D\u79F0\u3002<br/>2. \u9009\u62E9 Kafka KRaft \u7248\u672C\u3002<br/>3. \u6DFB\u52A0 Kafka \u8282\u70B9\u6216\u8005\u6279\u91CF\u5BFC\u5165\u8282\u70B9\uFF0C\u914D\u7F6E\u6BCF\u4E2A Kafka \u8282\u70B9\u7684\u4FE1\u606F\u3002<br/>4. \u786E\u5B9A\u4FE1\u606F\u65E0\u8BEF\u4E14\u8282\u70B9\u65E0\u51B2\u7A81\uFF0C\u70B9\u51FB\u521B\u5EFA\u96C6\u7FA4\u6309\u94AE\u3002
-kafka.eagle.clusters.manage.create.kraft=\u9009\u62E9 Kafka KRaft \u7248\u672C
 kafka.eagle.clusters.manage.create.node=Kafka \u8282\u70B9
 kafka.eagle.clusters.manage.create.node.btn=\u6DFB\u52A0\u8282\u70B9
 kafka.eagle.clusters.manage.create.node.batch.btn=\u6279\u91CF\u5BFC\u5165\u8282\u70B9
@@ -33,7 +32,7 @@ kafka.eagle.clusters.manage.add.node.port=\u8282\u70B9PORT
 kafka.eagle.clusters.manage.add.node.jmxport=\u8282\u70B9JMX_PORT
 kafka.eagle.clusters.manage.add.node.auth.check=\u662F\u5426\u5F00\u542F\u8BA4\u8BC1
 kafka.eagle.clusters.manage.add.node.auth.config=\u8BF7\u8F93\u5165\u8BA4\u8BC1\u914D\u7F6E
-kafka.eagle.clusters.manage.add.node.auth.config.placeholder=\u7528\u4E8E\u521B\u5EFAKafka\u5BA2\u6237\u7AEF\u8FDB\u884C\u4FE1\u606F\u83B7\u53D6\u7684\u76F8\u5173\u914D\u7F6E\uFF0C\u4F8B\u5982\u5F00\u542FSCRAM-SHA-256\u5B89\u5168\u7BA1\u63A7\u6A21\u5F0F\u7684\u96C6\u7FA4\u9700\u8F93\u5165\u5982\u4E0B\u914D\u7F6E\uFF0C\u672A\u5F00\u542F\u5B89\u5168\u7BA1\u63A7\u53EF\u4E0D\u8FDB\u884C\u4EFB\u4F55\u8F93\u5165\uFF1A\n{\n"security.protocol": "SASL_PLAINTEXT",\n"sasl.mechanism": "SCRAM-SHA-256",\n"sasl.jaas.config": "org.apache.kafka.common.security.scram.ScramLoginModule required username=\"xxxxxx\" password=\"xxxxxx\";"\n}
+kafka.eagle.clusters.manage.add.node.auth.config.placeholder=\u7528\u4E8E\u521B\u5EFAKafka\u5BA2\u6237\u7AEF\u8FDB\u884C\u4FE1\u606F\u83B7\u53D6\u7684\u76F8\u5173\u914D\u7F6E\uFF0C\u4F8B\u5982\u5F00\u542FSCRAM-SHA-256\u5B89\u5168\u8BA4\u8BC1\u6A21\u5F0F\u7684\u96C6\u7FA4\u9700\u8F93\u5165\u5982\u4E0B\u914D\u7F6E\uFF0C\u672A\u5F00\u542F\u5B89\u5168\u8BA4\u8BC1\u53EF\u4E0D\u8FDB\u884C\u4EFB\u4F55\u8F93\u5165\uFF1A\n{\n"security.protocol": "SASL_PLAINTEXT",\n"sasl.mechanism": "SCRAM-SHA-256",\n"sasl.jaas.config": "org.apache.kafka.common.security.scram.ScramLoginModule required username=\"xxxxxx\" password=\"xxxxxx\";"\n}
 kafka.eagle.clusters.manage.add.batch.module=\u4E0B\u8F7D\u6A21\u7248\u6587\u4EF6
 kafka.eagle.clusters.manage.add.batch.module.download=<i class="btn-icon-append" data-feather="file-text"></i> \u4E0B\u8F7D\u6A21\u7248
 kafka.eagle.clusters.manage.add.batch.node=\u6279\u91CF\u5BFC\u5165 Kafka \u8282\u70B9
