--- a/efak-web/src/main/resources/i18n/messages_zh_CN.properties
+++ b/efak-web/src/main/resources/i18n/messages_zh_CN.properties
@@ -25,11 +25,11 @@ kafka.eagle.clusters.manage.create.node=Kafka \u8282\u70B9
 kafka.eagle.clusters.manage.create.node.btn=\u6DFB\u52A0\u8282\u70B9
 kafka.eagle.clusters.manage.create.node.batch.btn=\u6279\u91CF\u5BFC\u5165\u8282\u70B9
 kafka.eagle.clusters.manage.create.node.exist=\u5DF2\u6DFB\u52A0 <code>8</code> \u4E2A\u8282\u70B9
-kafka.eagle.clusters.manage.add.node=\u6DFB\u52A0 Kafka \u8282\u70B9
-kafka.eagle.clusters.manage.add.node.id=\u8282\u70B9ID
-kafka.eagle.clusters.manage.add.node.host=\u8282\u70B9IP
-kafka.eagle.clusters.manage.add.node.port=\u8282\u70B9PORT
-kafka.eagle.clusters.manage.add.node.jmxport=\u8282\u70B9JMX_PORT
+kafka.eagle.clusters.manage.add.node=\u6DFB\u52A0 Kafka \u8282\u70B9 (<code>*</code> \u4E3A\u5FC5\u586B\u9879)
+kafka.eagle.clusters.manage.add.node.id=\u8282\u70B9ID (<code>*</code>)
+kafka.eagle.clusters.manage.add.node.host=\u8282\u70B9IP (<code>*</code>)
+kafka.eagle.clusters.manage.add.node.port=\u8282\u70B9PORT (<code>*</code>)
+kafka.eagle.clusters.manage.add.node.jmxport=\u8282\u70B9JMX_PORT (<code>*</code>)
 kafka.eagle.clusters.manage.add.node.auth.check=\u662F\u5426\u5F00\u542F\u8BA4\u8BC1
 kafka.eagle.clusters.manage.add.node.auth.config=\u8BF7\u8F93\u5165\u8BA4\u8BC1\u914D\u7F6E
 kafka.eagle.clusters.manage.add.node.auth.config.placeholder=\u7528\u4E8E\u521B\u5EFAKafka\u5BA2\u6237\u7AEF\u8FDB\u884C\u4FE1\u606F\u83B7\u53D6\u7684\u76F8\u5173\u914D\u7F6E\uFF0C\u4F8B\u5982\u5F00\u542FSCRAM-SHA-256\u5B89\u5168\u8BA4\u8BC1\u6A21\u5F0F\u7684\u96C6\u7FA4\u9700\u8F93\u5165\u5982\u4E0B\u914D\u7F6E\uFF0C\u672A\u5F00\u542F\u5B89\u5168\u8BA4\u8BC1\u53EF\u4E0D\u8FDB\u884C\u4EFB\u4F55\u8F93\u5165\uFF1A\n{\n"security.protocol": "SASL_PLAINTEXT",\n"sasl.mechanism": "SCRAM-SHA-256",\n"sasl.jaas.config": "org.apache.kafka.common.security.scram.ScramLoginModule required username=\"xxxxxx\" password=\"xxxxxx\";"\n}
