--- a/efak-web/src/main/resources/i18n/messages_zh_CN.properties
+++ b/efak-web/src/main/resources/i18n/messages_zh_CN.properties
@@ -14,7 +14,7 @@ kafka.eagle.clusters.manage.home.sub=\u96C6\u7FA4\u7BA1\u7406
 kafka.eagle.clusters.manage.home.sub.desc=1. \u96C6\u7FA4\u5217\u8868\u5C55\u793A\u5F53\u524D\u8D26\u53F7\u53EF\u7BA1\u7406\u7684\u96C6\u7FA4\u5217\u8868\uFF0C\u82E5\u5B58\u5728\u5F02\u5E38\u670D\u52A1\uFF0C\u5219\u96C6\u7FA4\u663E\u793A\u5F02\u5E38\u72B6\u6001\u3002<br/>2. \u521B\u5EFA\u96C6\u7FA4\uFF0C\u9700\u8981\u63D0\u524D\u51C6\u5907\u597DKafka\u8282\u70B9\uFF08\u673A\u5668\uFF09\u4FE1\u606F\uFF0C\u5982\u679C\u5DF2\u7ECF\u521B\u5EFA\u597D\u96C6\u7FA4\u8BF7\u70B9\u51FB\u96C6\u7FA4\u540D\u79F0\uFF0C\u8FDB\u5165\u8BE6\u60C5\u9875\u9762\u3002
 kafka.eagle.clusters.manage.create=\u521B\u5EFA\u96C6\u7FA4
 kafka.eagle.clusters.manage.create.cancle=\u7ACB\u5373\u53D6\u6D88
-kafka.eagle.clusters.manage.create.tr=<th>\u96C6\u7FA4\u540D\u79F0</th><th>\u72B6\u6001</th><th>\u8282\u70B9\u6570</th><th>\u66F4\u65B0\u65E5\u671F</th><th>KRaft</th><th>\u64CD\u4F5C</th>
+kafka.eagle.clusters.manage.create.tr=<th>\u96C6\u7FA4\u540D\u79F0</th><th>\u72B6\u6001</th><th>\u8282\u70B9\u6570</th><th>\u66F4\u65B0\u65E5\u671F</th><th>\u5B89\u5168\u8BA4\u8BC1</th><th>\u64CD\u4F5C</th>
 
 ## Cluster-Create
 kafka.eagle.clusters.manage.create.name=\u96C6\u7FA4\u540D\u79F0
@@ -24,7 +24,7 @@ kafka.eagle.clusters.manage.create.desc=1. \u8F93\u5165\u96C6\u7FA4\u540D\u79F0\
 kafka.eagle.clusters.manage.create.node=Kafka \u8282\u70B9
 kafka.eagle.clusters.manage.create.node.btn=\u6DFB\u52A0\u8282\u70B9
 kafka.eagle.clusters.manage.create.node.batch.btn=\u6279\u91CF\u5BFC\u5165\u8282\u70B9
-kafka.eagle.clusters.manage.create.node.exist=\u5DF2\u6DFB\u52A0 <code>8</code> \u4E2A\u8282\u70B9
+kafka.eagle.clusters.manage.create.node.exist=\u5DF2\u6DFB\u52A0 <code>0</code> \u4E2A\u8282\u70B9
 kafka.eagle.clusters.manage.add.node=\u6DFB\u52A0 Kafka \u8282\u70B9 (<code>*</code> \u4E3A\u5FC5\u586B\u9879)
 kafka.eagle.clusters.manage.add.node.id=\u8282\u70B9ID (<code>*</code>)
 kafka.eagle.clusters.manage.add.node.host=\u8282\u70B9IP (<code>*</code>)
@@ -38,6 +38,9 @@ kafka.eagle.clusters.manage.add.batch.module.download=<i class="btn-icon-append"
 kafka.eagle.clusters.manage.add.batch.node=\u6279\u91CF\u5BFC\u5165 Kafka \u8282\u70B9
 kafka.eagle.clusters.manage.add.batch.node.import=\u6309\u6A21\u7248\u683C\u5F0F\u5BFC\u5165
 kafka.eagle.clusters.manage.add.node.tr=<th>\u8282\u70B9ID</th><th>\u8282\u70B9IP</th><th>\u8282\u70B9PORT</th><th>\u8282\u70B9JMX_PORT</th><th>\u66F4\u65B0\u65F6\u95F4</th><th>\u64CD\u4F5C</th>
+kafka.eagle.clusters.manage.button.close=\u5173\u95ED
+kafka.eagle.clusters.manage.button.submit=\u63D0\u4EA4
+
 
 
 
