--- a/efak-web/src/main/resources/i18n/messages_zh_CN.properties
+++ b/efak-web/src/main/resources/i18n/messages_zh_CN.properties
@@ -5,7 +5,7 @@ kafka.eagle.manage.title.desc=\u96C6\u7FA4\u7BA1\u7406 - KafkaEagle
 kafka.eagle.manage.create.title.desc=\u521B\u5EFA\u96C6\u7FA4 - KafkaEagle
 
 # Welcome
-kafka.eagle.welcome.title=\u6B22\u8FCE\u8FDB\u5165Kafka Eagle\u96C6\u7FA4\u7BA1\u7406\u5E73\u53F0
+kafka.eagle.welcome.title=\u6B22\u8FCE\u8FDB\u5165 <span class='text-primary'>Kafka Eagle</span> \u96C6\u7FA4\u7BA1\u7406\u5E73\u53F0
 kafka.eagle.welcome.title.button=\u7ACB\u5373\u8FDB\u5165<i class="btn-icon-append" data-feather="arrow-right-circle"></i>
 
 # Cluster
