--- a/efak-web/src/main/resources/i18n/messages_zh_CN.properties
+++ b/efak-web/src/main/resources/i18n/messages_zh_CN.properties
@@ -20,8 +20,8 @@ kafka.eagle.clusters.manage.create.tr=<th>\u96C6\u7FA4\u540D\u79F0</th><th>\u72B
 kafka.eagle.clusters.manage.create.name=\u96C6\u7FA4\u540D\u79F0
 kafka.eagle.clusters.manage.create.name.test=Kafka\u6D4B\u8BD5\u96C6\u7FA4
 kafka.eagle.clusters.manage.create.name.placeholder=\u8BF7\u8F93\u5165\u96C6\u7FA4\u540D\u79F0
-kafka.eagle.clusters.manage.create.desc=1. \u8F93\u5165\u96C6\u7FA4\u540D\u79F0\u3002<br/>2. \u9009\u62E9 Kafka KRaft \u7248\u672C\u3002<br/>3. \u6DFB\u52A0 Kafka \u8282\u70B9\u6216\u8005\u6279\u91CF\u5BFC\u5165\u8282\u70B9\uFF0C\u914D\u7F6E\u6BCF\u4E2A Kafka \u8282\u70B9\u7684\u4FE1\u606F\u3002<br/>4. \u786E\u5B9A\u4FE1\u606F\u65E0\u8BEF\u4E14\u8282\u70B9\u65E0\u51B2\u7A81\uFF0C\u70B9\u51FB\u521B\u5EFA\u96C6\u7FA4\u6309\u94AE\u3002
-kafka.eagle.clusters.manage.create.node=Kafka \u8282\u70B9
+kafka.eagle.clusters.manage.create.desc=1. \u5BFC\u5165 Kafka \u8282\u70B9\u3002<br/>2. \u8F93\u5165\u5373\u5C06\u521B\u5EFA\u7684\u96C6\u7FA4\u540D\u79F0\u3002<br/>3. \u9009\u62E9 Kafka \u96C6\u7FA4\u662F\u5426\u5F00\u542F\u5B89\u5168\u8BA4\u8BC1\u3002<br/>4. \u786E\u5B9A\u4FE1\u606F\u65E0\u8BEF\u4E14\u8282\u70B9\u65E0\u51B2\u7A81\uFF0C\u70B9\u51FB\u521B\u5EFA\u96C6\u7FA4\u6309\u94AE\u3002
+kafka.eagle.clusters.manage.create.node=\u5BFC\u5165 Kafka \u8282\u70B9
 kafka.eagle.clusters.manage.create.node.btn=\u6DFB\u52A0\u8282\u70B9
 kafka.eagle.clusters.manage.create.node.batch.btn=\u6279\u91CF\u5BFC\u5165\u8282\u70B9
 kafka.eagle.clusters.manage.create.node.exist=\u5DF2\u6DFB\u52A0 <code>0</code> \u4E2A\u8282\u70B9
@@ -53,7 +53,7 @@ kafka.eagle.dataspace.welcome=\u6B22\u8FCE\u8FDB\u5165Kafka\u7BA1\u63A7\u5E73\u5
 kafka.eagle.dataspace.search=\u5FEB\u901F\u641C\u7D22
 kafka.eagle.dataspace.dashboard.broker=\u96C6\u7FA4\u8282\u70B9
 kafka.eagle.dataspace.dashboard.view=\u67E5\u770B
-kafka.eagle.dataspace.dashboard.topics=\u4E3B\u9898\u603B\u91CF
+kafka.eagle.dataspace.dashboard.topics=\u4E3B\u9898\u6570\u91CF
 kafka.eagle.dataspace.dashboard.consumers=\u6D88\u8D39\u8005\u6570
 kafka.eagle.dataspace.dashboard.messagein=\u6D88\u606F\u5199\u5165\u6761\u6570
 kafka.eagle.dataspace.dashboard.messagein.day=\u5929
@@ -86,7 +86,7 @@ kafka.eagle.dataspace.dashboard.topic.table.byteout.doc=\u6309\u8BFB\u53D6\u964D
 kafka.eagle.topics=\u4E3B\u9898\u4FE1\u606F
 kafka.eagle.topics.list=\u5217\u8868
 kafka.eagle.topics.create=\u521B\u5EFA\u4E3B\u9898
-kafka.eagle.topics.ksql=\u67E5\u8BE2\u4E3B\u9898
+kafka.eagle.topics.ksql=\u67E5\u8BE2\u4E3B\u9898 <span class="badge border border-warning text-warning">vip</span>
 kafka.eagle.topics.manager=\u7BA1\u7406\u4E3B\u9898
 kafka.eagle.topics.mock=\u6D4B\u8BD5\u4E3B\u9898
 kafka.eagle.topics.metadata=\u5143\u6570\u636E
