--- a/efak-web/src/main/resources/i18n/messages_zh_CN.properties
+++ b/efak-web/src/main/resources/i18n/messages_zh_CN.properties
@@ -91,6 +91,15 @@ kafka.eagle.topics.metadata.op=\u7BA1\u7406\u5143\u6570\u636E
 kafka.eagle.topics.balance=\u8D1F\u8F7D\u5747\u8861
 kafka.eagle.topics.balance.job=\u4EFB\u52A1\u5217\u8868
 kafka.eagle.topics.create.desc=1. \u8F93\u5165\u5373\u5C06\u521B\u5EFA\u7684\u4E3B\u9898\u540D\u79F0\u3002<br/>2. \u8BBE\u7F6E\u5F85\u521B\u5EFA\u4E3B\u9898\u7684\u5206\u533A\u6570\u3001\u526F\u672C\u6570\u3002<br/>3. \u9009\u62E9\u5F85\u521B\u5EFA\u4E3B\u9898\u6570\u636E\u4FDD\u5B58\u65F6\u95F4\u3002<br/>4. \u786E\u5B9A\u4FE1\u606F\u65E0\u8BEF\u4E14\u4E3B\u9898\u540D\u79F0\u65E0\u51B2\u7A81\uFF0C\u70B9\u51FB\u521B\u5EFA\u4E3B\u9898\u6309\u94AE\u3002
+kafka.eagle.topics.create.name=<code>*</code>\u4E3B\u9898\u540D\u79F0
+kafka.eagle.topics.create.name.placeholder=efak_topic_test
+kafka.eagle.topics.partition.name=<code>*</code>\u5206\u533A\u6570
+kafka.eagle.topics.partition.name.placeholder=1
+kafka.eagle.topics.replicate.name=<code>*</code>\u526F\u672C\u6570
+kafka.eagle.topics.replicate.name.placeholder=1
+kafka.eagle.topics.retain.name=<code>*</code>\u6570\u636E\u4FDD\u5B58\u65F6\u95F4
+kafka.eagle.topics.retain.name.placeholder=1
+kafka.eagle.topics.retain.unit.name=\u65F6\u95F4\u5355\u4F4D
 
 
 
