add: create topic retain

--- a/efak-web/src/main/resources/i18n/messages_zh_CN.properties
+++ b/efak-web/src/main/resources/i18n/messages_zh_CN.properties
@@ -98,8 +98,12 @@ kafka.eagle.topics.partition.name.placeholder=1
 kafka.eagle.topics.replicate.name=<code>*</code>\u526F\u672C\u6570
 kafka.eagle.topics.replicate.name.placeholder=1
 kafka.eagle.topics.retain.name=<code>*</code>\u6570\u636E\u4FDD\u5B58\u65F6\u95F4
-kafka.eagle.topics.retain.name.placeholder=1
 kafka.eagle.topics.retain.unit.name=\u65F6\u95F4\u5355\u4F4D
+kafka.eagle.topics.retain.name.placeholder=1
+kafka.eagle.topics.retain.unit.ms=\u6BEB\u79D2
+kafka.eagle.topics.retain.unit.min=\u5206\u949F
+kafka.eagle.topics.retain.unit.hour=\u5C0F\u65F6
+kafka.eagle.topics.retain.unit.day=\u5929
 
 
 
