add: create topic navbar

--- a/efak-web/src/main/resources/i18n/messages_zh_CN.properties
+++ b/efak-web/src/main/resources/i18n/messages_zh_CN.properties
@@ -84,7 +84,7 @@ kafka.eagle.topics=\u4E3B\u9898\u4FE1\u606F
 kafka.eagle.topics.list=\u5217\u8868
 kafka.eagle.topics.create=\u521B\u5EFA\u4E3B\u9898
 kafka.eagle.topic.manage.create.cancle=\u7ACB\u5373\u53D6\u6D88
-kafka.eagle.topics.ksql=\u67E5\u8BE2\u4E3B\u9898 <span class="badge border border-warning text-warning">vip</span>
+kafka.eagle.topics.ksql=\u67E5\u8BE2\u4E3B\u9898
 kafka.eagle.topics.manager=\u7BA1\u7406\u4E3B\u9898
 kafka.eagle.topics.mock=\u6D4B\u8BD5\u4E3B\u9898
 kafka.eagle.topics.metadata=\u5143\u6570\u636E
