--- a/efak-web/src/main/resources/i18n/messages_zh_CN.properties
+++ b/efak-web/src/main/resources/i18n/messages_zh_CN.properties
@@ -11,7 +11,7 @@ kafka.eagle.welcome.title.button=\u7ACB\u5373\u8FDB\u5165<i class="btn-icon-appe
 # Cluster
 kafka.eagle.clusters.manage.home=\u9996\u9875
 kafka.eagle.clusters.manage.home.sub=\u96C6\u7FA4\u7BA1\u7406
-kafka.eagle.clusters.manage.home.sub.desc=1. \u96C6\u7FA4\u5217\u8868\u5C55\u793A\u5F53\u524D\u8D26\u53F7\u53EF\u7BA1\u7406\u7684\u96C6\u7FA4\u5217\u8868\uFF0C\u82E5\u5B58\u5728\u5F02\u5E38\u670D\u52A1\uFF0C\u5219\u96C6\u7FA4\u663E\u793A\u5F02\u5E38\u72B6\u6001\u3002<br/>2. \u521B\u5EFA\u96C6\u7FA4\uFF0C\u9700\u8981\u63D0\u524D\u51C6\u5907\u597DKafka\u8282\u70B9\uFF08\u673A\u5668\uFF09\u4FE1\u606F\uFF0C\u5982\u679C\u5DF2\u7ECF\u521B\u5EFA\u597D\u96C6\u7FA4\u8BF7\u70B9\u51FB\u96C6\u7FA4\u540D\u79F0\uFF0C\u8FDB\u5165\u8BE6\u60C5\u9875\u9762\u3002
+kafka.eagle.clusters.manage.home.sub.desc=1. \u96C6\u7FA4\u5217\u8868\u5C55\u793A\u5F53\u524D\u8D26\u53F7\u53EF\u7BA1\u7406\u7684\u96C6\u7FA4\u5217\u8868\uFF0C\u82E5\u5B58\u5728\u5F02\u5E38\u670D\u52A1\uFF0C\u5219\u96C6\u7FA4\u663E\u793A\u5F02\u5E38\u72B6\u6001\u3002<br/>2. \u521B\u5EFA\u96C6\u7FA4\uFF0C\u9700\u8981\u63D0\u524D\u51C6\u5907\u597D Kafka \u8282\u70B9\uFF08\u673A\u5668\uFF09\u4FE1\u606F\uFF0C\u5982\u679C\u5DF2\u7ECF\u521B\u5EFA\u597D\u96C6\u7FA4\u8BF7\u70B9\u51FB\u96C6\u7FA4\u540D\u79F0\uFF0C\u8FDB\u5165\u8BE6\u60C5\u9875\u9762\u3002
 kafka.eagle.clusters.manage.create=\u521B\u5EFA\u96C6\u7FA4
 kafka.eagle.clusters.manage.create.cancle=\u7ACB\u5373\u53D6\u6D88
 kafka.eagle.clusters.manage.create.tr=<th>\u96C6\u7FA4\u540D\u79F0</th><th>\u72B6\u6001</th><th>\u8282\u70B9\u6570</th><th>\u66F4\u65B0\u65E5\u671F</th><th>\u5B89\u5168\u8BA4\u8BC1</th><th>\u64CD\u4F5C</th>
@@ -108,6 +108,9 @@ kafka.eagle.topics.retain.unit.day=\u5929
 kafka.eagle.topic.create.name.link=\u521B\u5EFA\u4E3B\u9898\u540D\u79F0
 kafka.eagle.topic.partition.name.link=\u8BBE\u7F6E\u5206\u533A\u548C\u526F\u672C
 kafka.eagle.topic.retain.name.link=\u9009\u62E9\u6570\u636E\u4FDD\u5B58\u65F6\u95F4
+kafka.eagle.topics.manager.home.sub.desc=1. \u4E3B\u9898\u5217\u8868\u5C55\u793A\u5F53\u524D\u8D26\u53F7\u53EF\u7BA1\u7406\u7684\u4E3B\u9898\u5217\u8868\uFF0C\u82E5\u96C6\u7FA4\u5B58\u5728\u5F02\u5E38\uFF0C\u5219\u4E3B\u9898\u663E\u793A\u5F02\u5E38\u3002<br/>2. BROKER SPREAD \u6307\u6807\u503C\u8986\u76D6\u7387\u8D8A\u9AD8\uFF0C\u96C6\u7FA4\u8282\u70B9\u7684\u8D44\u6E90\u4F7F\u7528\u7387\u8D8A\u9AD8\u3002<br/>3. BROKER SKEWED \u6307\u6807\u503C\u503E\u659C\u8D8A\u5927\uFF0C\u96C6\u7FA4\u8282\u70B9\u538B\u529B\u5C31\u8D8A\u5927\u3002<br/>4. BROKER LEADER SKEWED \u6307\u6807\u503C\u503E\u659C\u5EA6\u8D8A\u9AD8\uFF0C\u96C6\u7FA4 Leader \u8282\u70B9\u7684\u538B\u529B\u5C31\u8D8A\u5927\u3002
+kafka.eagle.topic.manage.tr=<th>\u4E3B\u9898\u540D\u79F0</th><th>\u5206\u533A\u6570</th><th>\u526F\u672C\u6570</th><th>Broker Spread(%)</th><th>Broker Skewed(%)</th><th>Broker Leader Skewed(%)</th><th>\u4FDD\u5B58\u65F6\u95F4(\u5C0F\u65F6)</th><th>\u64CD\u4F5C</th>
+
 
 
 
