--- a/efak-web/src/main/resources/i18n/messages_zh_CN.properties
+++ b/efak-web/src/main/resources/i18n/messages_zh_CN.properties
@@ -110,6 +110,10 @@ kafka.eagle.topic.partition.name.link=\u8BBE\u7F6E\u5206\u533A\u548C\u526F\u672C
 kafka.eagle.topic.retain.name.link=\u9009\u62E9\u6570\u636E\u4FDD\u5B58\u65F6\u95F4
 kafka.eagle.topics.manager.home.sub.desc=1. \u4E3B\u9898\u5217\u8868\u5C55\u793A\u5F53\u524D\u8D26\u53F7\u53EF\u7BA1\u7406\u7684\u4E3B\u9898\u5217\u8868\uFF0C\u82E5\u96C6\u7FA4\u5B58\u5728\u5F02\u5E38\uFF0C\u5219\u4E3B\u9898\u663E\u793A\u5F02\u5E38\u3002<br/>2. BROKER SPREAD \u6307\u6807\u503C\u8986\u76D6\u7387\u8D8A\u9AD8\uFF0C\u96C6\u7FA4\u8282\u70B9\u7684\u8D44\u6E90\u4F7F\u7528\u7387\u8D8A\u9AD8\u3002<br/>3. BROKER SKEWED \u6307\u6807\u503C\u503E\u659C\u8D8A\u5927\uFF0C\u96C6\u7FA4\u8282\u70B9\u538B\u529B\u5C31\u8D8A\u5927\u3002<br/>4. BROKER LEADER SKEWED \u6307\u6807\u503C\u503E\u659C\u5EA6\u8D8A\u9AD8\uFF0C\u96C6\u7FA4 Leader \u8282\u70B9\u7684\u538B\u529B\u5C31\u8D8A\u5927\u3002
 kafka.eagle.topic.manage.tr=<th>\u4E3B\u9898\u540D\u79F0</th><th>\u5206\u533A\u6570</th><th>\u526F\u672C\u6570</th><th>Broker Spread(%)</th><th>Broker Skewed(%)</th><th>Broker Leader Skewed(%)</th><th>\u4FDD\u5B58\u65F6\u95F4(\u5C0F\u65F6)</th><th>\u64CD\u4F5C</th>
+kafka.eagle.topic.manage.partition.add=\u6269\u5206\u533A (<code>*</code> \u4E3A\u5FC5\u586B\u9879)
+kafka.eagle.topic.manage.name.add=\u4E3B\u9898\u540D\u79F0
+kafka.eagle.topic.manage.partition.add.current=\u5F53\u524D\u5206\u533A\u6570 (<code>*</code>)
+kafka.eagle.topic.manage.partition.add.new=\u589E\u52A0\u5206\u533A\u81F3 (<code>*</code>)
 
 
 
@@ -130,7 +134,7 @@ kafka.eagle.clusters.manager=\u591A\u96C6\u7FA4\u7BA1\u7406
 kafka.eagle.monitor=\u6027\u80FD\u76D1\u63A7
 kafka.eagle.monitor.mbean=MBean
 kafka.eagle.monitor.kafka=Kafka
-kafka.eagle.monitor.zookeeper=Zookeeper
+kafka.eagle.monitor.topic=\u4E3B\u9898
 
 
 # Connector
