add: mock and preview

--- a/efak-web/src/main/resources/i18n/messages_zh_CN.properties
+++ b/efak-web/src/main/resources/i18n/messages_zh_CN.properties
@@ -120,7 +120,14 @@ kafka.eagle.topic.meta.logsize=\u603B\u8BB0\u5F55
 kafka.eagle.topic.meta.capacity=\u603B\u5BB9\u91CF
 kafka.eagle.topic.meta.summary=\u4E3B\u9898\u5BB9\u91CF\u6C47\u603B
 kafka.eagle.topic.meta.table.detail=\u4E3B\u9898\u8BE6\u60C5\u5217\u8868
-kafka.eagle.topic.meta.tr=<th>\u5206\u533AID</th><th>\u8BB0\u5F55\u6570</th><th>Leader</th><th>Replicas</th><th>In Sync Replicas</th><th>Preferred Leader</th><th>Under Replicated</th><th>\u6570\u636E\u9884\u89C8</th>
+kafka.eagle.topic.meta.preview=\u6570\u636E\u9884\u89C8
+kafka.eagle.topic.meta.preview.ten=\u6700\u65B010\u6761
+kafka.eagle.topic.meta.tr=<th>\u5206\u533AID</th><th>\u8BB0\u5F55\u6570</th><th>Leader</th><th>Replicas</th><th>In Sync Replicas</th><th>Preferred Leader</th><th>Under Replicated</th><th>\u6570\u636E\u9884\u89C8 <i data-feather="alert-circle" class="icon-sm" data-bs-toggle="tooltip" data-bs-placement="top" title="\u9884\u89C8\u6700\u65B010\u6761"></i></th>
+kafka.eagle.topics.mock.desc=1. \u9009\u62E9\u4E3B\u9898\u540D\u79F0\u3002<br/>2. \u5728\u6587\u672C\u6846\u4E2D\u586B\u5199\u5F85\u53D1\u9001\u7684\u5185\u5BB9\u3002<br/>3. \u786E\u8BA4\u4FE1\u606F\u65E0\u8BEF\u540E\uFF0C\u70B9\u51FB\u53D1\u9001\u6570\u636E\u6309\u94AE\u3002
+kafka.eagle.topics.mock.send=\u53D1\u9001\u6570\u636E
+kafka.eagle.topics.mock.name.text=\u586B\u5199\u5185\u5BB9(<code>*</code>)
+kafka.eagle.topics.mock.name.select.link=\u9009\u62E9\u4E3B\u9898\u540D\u79F0
+kafka.eagle.topics.mock.name.textarea.link=\u586B\u5199\u53D1\u9001\u5185\u5BB9
 
 
 
