--- a/efak-web/src/main/resources/i18n/messages_zh_CN.properties
+++ b/efak-web/src/main/resources/i18n/messages_zh_CN.properties
@@ -1,3 +1,10 @@
+# Login
+kafka.eagle.login.title=\u767B\u5F55 - KafkaEagle
+kafka.eagle.login.username=\u7528\u6237\u540D
+kafka.eagle.login.passowrd=\u5BC6\u7801
+kafka.eagle.login.rememberme=\u8BB0\u4F4F\u6211
+kafka.eagle.login.submit=\u767B\u5F55
+
 # Title
 kafka.eagle.welcome.title.desc=\u9996\u9875 - KafkaEagle
 kafka.eagle.dashboard.title.desc=\u96C6\u7FA4\u603B\u89C8 - KafkaEagle
