add: efak login and version info

--- a/efak-web/src/main/resources/i18n/messages_zh_CN.properties
+++ b/efak-web/src/main/resources/i18n/messages_zh_CN.properties
@@ -4,6 +4,7 @@ kafka.eagle.login.username=\u7528\u6237\u540D
 kafka.eagle.login.passowrd=\u5BC6\u7801
 kafka.eagle.login.rememberme=\u8BB0\u4F4F\u6211
 kafka.eagle.login.submit=\u767B\u5F55
+kafka.eagle.login.error.msg=\u7528\u6237\u540D\u548C\u5BC6\u7801\u9A8C\u8BC1\u5931\u8D25
 
 # Title
 kafka.eagle.welcome.title.desc=\u9996\u9875 - KafkaEagle
