add: topic msg chart is done

--- a/efak-web/src/main/resources/i18n/messages_zh_CN.properties
+++ b/efak-web/src/main/resources/i18n/messages_zh_CN.properties
@@ -128,6 +128,7 @@ kafka.eagle.topic.meta.logsize=\u603B\u8BB0\u5F55
 kafka.eagle.topic.meta.capacity=\u603B\u5BB9\u91CF
 kafka.eagle.topic.meta.summary=\u4E3B\u9898\u5BB9\u91CF\u6C47\u603B
 kafka.eagle.topic.meta.table.detail=\u4E3B\u9898\u8BE6\u60C5\u5217\u8868
+kafka.eagle.topic.meta.chart=\u6570\u636E\u8D8B\u52BF\u9884\u89C8
 kafka.eagle.topic.meta.preview=\u6570\u636E\u9884\u89C8
 kafka.eagle.topic.meta.preview.ten=\u6700\u65B010\u6761
 kafka.eagle.topic.meta.tr=<th>\u5206\u533AID</th><th>\u8BB0\u5F55\u6570</th><th>Leader</th><th>Replicas</th><th>In Sync Replicas</th><th>Preferred Leader</th><th>Under Replicated</th><th>\u6570\u636E\u9884\u89C8 <i data-feather="alert-circle" class="icon-sm" data-bs-toggle="tooltip" data-bs-placement="top" title="\u9884\u89C8\u6700\u65B010\u6761"></i></th>
