add: design produce monitor view

--- a/efak-web/src/main/resources/i18n/messages_zh_CN.properties
+++ b/efak-web/src/main/resources/i18n/messages_zh_CN.properties
@@ -91,10 +91,13 @@ kafka.eagle.dataspace.dashboard.topic.table.byteout.doc=\u6309\u8BFB\u53D6\u964D
 kafka.eagle.topics=\u4E3B\u9898\u4FE1\u606F
 kafka.eagle.topics.list=\u5217\u8868
 kafka.eagle.topics.create=\u521B\u5EFA\u4E3B\u9898
+kafka.eagle.topics.create.title=\u521B\u5EFA\u4E3B\u9898 - KafkaEagle
 kafka.eagle.topic.manage.create.cancle=\u7ACB\u5373\u53D6\u6D88
 kafka.eagle.topics.ksql=\u67E5\u8BE2\u4E3B\u9898
 kafka.eagle.topics.manager=\u7BA1\u7406\u4E3B\u9898
+kafka.eagle.topics.manager.title=\u7BA1\u7406\u4E3B\u9898 - KafkaEagle
 kafka.eagle.topics.mock=\u6D4B\u8BD5\u4E3B\u9898
+kafka.eagle.topics.mock.title=\u6D4B\u8BD5\u4E3B\u9898 - KafkaEagle
 kafka.eagle.topics.metadata=\u5143\u6570\u636E
 kafka.eagle.topics.metadata.op=\u7BA1\u7406\u5143\u6570\u636E
 kafka.eagle.topics.balance=\u8D1F\u8F7D\u5747\u8861
@@ -158,7 +161,12 @@ kafka.eagle.clusters.manager=\u591A\u96C6\u7FA4\u7BA1\u7406
 kafka.eagle.monitor=\u6027\u80FD\u76D1\u63A7
 kafka.eagle.monitor.mbean=MBean
 kafka.eagle.monitor.kafka=Kafka
-kafka.eagle.monitor.topic=\u4E3B\u9898
+kafka.eagle.monitor.produce=\u751F\u4EA7\u8005
+kafka.eagle.monitor.produce.title=\u751F\u4EA7\u8005 - KafkaEagle
+kafka.eagle.monitor.produce.desc=1. \u9ED8\u8BA4\u6309\u5929\u5C55\u793A\u5168\u90E8\u4E3B\u9898\u7684\u6D88\u606F\u91CF\u7EA7\u3002<br/>2. \u53EF\u4EE5\u9009\u62E9\u90E8\u5206\u4E3B\u9898\u6765\u5C55\u793A\u6D88\u606F\u91CF\u7EA7\u3002<br/>3. \u786E\u8BA4\u4FE1\u606F\u65E0\u8BEF\u540E\uFF0C\u70B9\u51FB\u67E5\u8BE2\u6570\u636E\u6309\u94AE\u3002
+kafka.eagle.monitor.produce.poll=\u67E5\u8BE2\u6570\u636E
+kafka.eagle.monitor.produce.topic=\u4E3B\u9898\u540D\u79F0
+kafka.eagle.monitor.produce.trend=\u6570\u636E\u8D8B\u52BF\u9884\u89C8
 
 
 # Connector
