--- a/efak-web/src/main/resources/i18n/messages_zh_CN.properties
+++ b/efak-web/src/main/resources/i18n/messages_zh_CN.properties
@@ -187,6 +187,7 @@ kafka.eagle.system.audit=\u5BA1\u8BA1\u65E5\u5FD7
 kafka.eagle.system.audit.desc=1. \u5C55\u793A\u7528\u6237\u8BBF\u95EE\u7CFB\u7EDF\u7684\u76EE\u5F55\u53CA\u64CD\u4F5C\u3002<br/>2. \u53EF\u4EE5\u9009\u62E9\u4E3B\u673A\u5730\u5740\u6765\u7B5B\u9009\u90E8\u5206\u8BBF\u95EE\u76EE\u5F55\u53CA\u7528\u6237\u64CD\u4F5C\u3002
 kafka.eagle.system.audit.title=\u5BA1\u8BA1\u65E5\u5FD7 - KafkaEagle
 kafka.eagle.system.audit.tr=<th>\u4E3B\u673A\u5730\u5740</th><th>\u8BBF\u95EE\u8DEF\u5F84</th><th>\u8BF7\u6C42\u53C2\u6570</th><th>\u8BF7\u6C42\u65B9\u5F0F</th><th>\u54CD\u5E94\u8017\u65F6(\u6BEB\u79D2)</th><th>\u54CD\u5E94\u72B6\u6001\u7801</th><th>\u8BBF\u95EE\u65F6\u95F4</th><th>\u64CD\u4F5C</th>
+kafka.eagle.system.audit.log.detail=\u7528\u6237\u8BBF\u95EE\u8BE6\u60C5
 
 # Header
 kafka.eagle.header.quick=\u5FEB\u901F\u5165\u53E3
