add: profile view

--- a/efak-web/src/main/resources/i18n/messages_zh_CN.properties
+++ b/efak-web/src/main/resources/i18n/messages_zh_CN.properties
@@ -188,6 +188,15 @@ kafka.eagle.system.audit.desc=1. \u5C55\u793A\u7528\u6237\u8BBF\u95EE\u7CFB\u7ED
 kafka.eagle.system.audit.title=\u5BA1\u8BA1\u65E5\u5FD7 - KafkaEagle
 kafka.eagle.system.audit.tr=<th>\u4E3B\u673A\u5730\u5740</th><th>\u8BBF\u95EE\u8DEF\u5F84</th><th>\u8BF7\u6C42\u53C2\u6570</th><th>\u8BF7\u6C42\u65B9\u5F0F</th><th>\u54CD\u5E94\u8017\u65F6(\u6BEB\u79D2)</th><th>\u54CD\u5E94\u72B6\u6001\u7801</th><th>\u8BBF\u95EE\u65F6\u95F4</th><th>\u64CD\u4F5C</th>
 kafka.eagle.system.audit.log.detail=\u7528\u6237\u8BBF\u95EE\u8BE6\u60C5
+kafka.eagle.system.profile.title=\u4E2A\u4EBA\u4E2D\u5FC3 - KafkaEagle
+kafka.eagle.system.profile=\u4E2A\u4EBA\u4E2D\u5FC3
+kafka.eagle.system.profile.user=\u7528\u6237\u4FE1\u606F
+kafka.eagle.system.profile.password=\u4FEE\u6539\u5BC6\u7801
+kafka.eagle.system.profile.password.submit=\u7ACB\u5373\u4FEE\u6539
+kafka.eagle.system.profile.password.cancle=\u53D6\u6D88\u4FEE\u6539
+kafka.eagle.system.profile.password.old=\u65E7\u5BC6\u7801(<code>*</code>)
+kafka.eagle.system.profile.password.new=\u65B0\u5BC6\u7801(<code>*</code>)
+kafka.eagle.system.profile.desc=1. \u5C55\u793A\u5F53\u524D\u8D26\u53F7\u7684\u57FA\u672C\u4FE1\u606F\u3002<br/>2. \u53EF\u4EE5\u4FEE\u6539\u5F53\u524D\u8D26\u53F7\u7684\u5BC6\u7801\u3002
 
 # Header
 kafka.eagle.header.quick=\u5FEB\u901F\u5165\u53E3
