add: kafka broker list

--- a/efak-web/src/main/resources/i18n/messages_zh_CN.properties
+++ b/efak-web/src/main/resources/i18n/messages_zh_CN.properties
@@ -153,9 +153,12 @@ kafka.eagle.consumers.group.detail=\u5E94\u7528\u8BE6\u60C5
 # Clusters
 kafka.eagle.clusters=\u8282\u70B9\u7BA1\u7406
 kafka.eagle.clusters.kafka=Kafka
-kafka.eagle.clusters.zookeeper=Zookeeper
 kafka.eagle.clusters.server=\u670D\u52A1\u8282\u70B9
 kafka.eagle.clusters.manager=\u591A\u96C6\u7FA4\u7BA1\u7406
+kafka.eagle.clusters.kafka.title=Kafka - KafkaEagle
+kafka.eagle.clusters.kafka.desc=1. \u5C55\u793A\u5F53\u524D Kafka \u96C6\u7FA4\u7684\u8282\u70B9\u4FE1\u606F\u3002<br/>2. \u5185\u5B58\u548C CPU \u4F7F\u7528\u7387\u8D8A\u9AD8\uFF0C\u96C6\u7FA4\u8282\u70B9\u538B\u529B\u5C31\u8D8A\u5927\u3002
+kafka.eagle.clusters.kafka.tr=<th>\u8282\u70B9ID</th><th>IP</th><th>\u7AEF\u53E3</th><th>\u7AEF\u53E3\u72B6\u6001</th><th>JMX_PORT</th><th>JMX_PORT\u72B6\u6001</th><th>\u5185\u5B58\u4F7F\u7528\u7387(%)</th><th>CPU\u4F7F\u7528\u7387(%)</th><th>\u542F\u52A8\u65F6\u95F4</th><th>\u7248\u672C\u53F7</th>
+
 
 # Monitor
 kafka.eagle.monitor=\u6027\u80FD\u76D1\u63A7
