--- a/efak-web/src/main/resources/i18n/messages_zh_CN.properties
+++ b/efak-web/src/main/resources/i18n/messages_zh_CN.properties
@@ -147,8 +147,16 @@ kafka.eagle.topics.mock.name.textarea.link=\u586B\u5199\u53D1\u9001\u5185\u5BB9
 
 # Consumers
 kafka.eagle.consumers.group=\u6D88\u8D39\u8005\u7EC4
-kafka.eagle.consumers.group.overview=\u6D88\u8D39\u603B\u89C8
+kafka.eagle.consumers.group.title=\u6D88\u8D39\u8005\u7EC4 - KafkaEagle
+kafka.eagle.consumers.group.summary=\u6D88\u8D39\u603B\u89C8
+kafka.eagle.consumers.group.summary.desc=1. \u5C55\u793A\u5F53\u524D\u96C6\u7FA4\u6D88\u8D39\u8005\u7EC4\u4FE1\u606F\u3002<br/>2. \u9009\u62E9\u4E0D\u540C\u7684\u6D88\u8D39\u8005\u540D\u79F0\u6765\u9884\u89C8\u4E3B\u9898\u5173\u7CFB\u62D3\u6251\u56FE\u3002
+kafka.eagle.consumers.group.name=\u6D88\u8D39\u8005\u540D\u79F0
+kafka.eagle.consumers.group.total=\u603B\u6D88\u8D39\u8005
+kafka.eagle.consumers.group.active=\u6D3B\u8DC3\u6D88\u8D39\u8005
+kafka.eagle.consumers.group.topology=\u4E3B\u9898\u5173\u7CFB\u62D3\u6251\u56FE
+
 kafka.eagle.consumers.group.detail=\u5E94\u7528\u8BE6\u60C5
+
 
 # Clusters
 kafka.eagle.clusters=\u8282\u70B9\u7BA1\u7406
@@ -157,7 +165,7 @@ kafka.eagle.clusters.server=\u670D\u52A1\u8282\u70B9
 kafka.eagle.clusters.manager=\u591A\u96C6\u7FA4\u7BA1\u7406
 kafka.eagle.clusters.kafka.title=Kafka - KafkaEagle
 kafka.eagle.clusters.kafka.desc=1. \u5C55\u793A\u5F53\u524D Kafka \u96C6\u7FA4\u7684\u8282\u70B9\u4FE1\u606F\u3002<br/>2. \u5185\u5B58\u548C CPU \u4F7F\u7528\u7387\u8D8A\u9AD8\uFF0C\u96C6\u7FA4\u8282\u70B9\u538B\u529B\u5C31\u8D8A\u5927\u3002
-kafka.eagle.clusters.kafka.tr=<th>\u8282\u70B9ID</th><th>IP</th><th>\u7AEF\u53E3</th><th>\u7AEF\u53E3\u72B6\u6001</th><th>JMX_PORT</th><th>JMX_PORT\u72B6\u6001</th><th>\u5185\u5B58\u4F7F\u7528\u7387(%)</th><th>CPU\u4F7F\u7528\u7387(%)</th><th>\u542F\u52A8\u65F6\u95F4</th><th>\u7248\u672C\u53F7</th>
+kafka.eagle.clusters.kafka.tr=<th>\u8282\u70B9ID</th><th>IP</th><th>PORT</th><th>PORT\u72B6\u6001</th><th>JMX_PORT</th><th>JMX_PORT\u72B6\u6001</th><th>\u5185\u5B58\u4F7F\u7528\u7387(%)</th><th>CPU\u4F7F\u7528\u7387(%)</th><th>\u542F\u52A8\u65F6\u95F4</th><th>\u7248\u672C\u53F7</th>
 
 
 # Monitor
@@ -166,8 +174,7 @@ kafka.eagle.monitor.mbean=MBean
 kafka.eagle.monitor.kafka=Kafka
 kafka.eagle.monitor.produce=\u751F\u4EA7\u8005
 kafka.eagle.monitor.produce.title=\u751F\u4EA7\u8005 - KafkaEagle
-kafka.eagle.monitor.produce.desc=1. \u9ED8\u8BA4\u6309\u5929\u5C55\u793A\u5168\u90E8\u4E3B\u9898\u7684\u6D88\u606F\u91CF\u7EA7\u3002<br/>2. \u53EF\u4EE5\u9009\u62E9\u90E8\u5206\u4E3B\u9898\u6765\u5C55\u793A\u6D88\u606F\u91CF\u7EA7\u3002<br/>3. \u786E\u8BA4\u4FE1\u606F\u65E0\u8BEF\u540E\uFF0C\u70B9\u51FB\u67E5\u8BE2\u6570\u636E\u6309\u94AE\u3002
-kafka.eagle.monitor.produce.poll=\u67E5\u8BE2\u6570\u636E
+kafka.eagle.monitor.produce.desc=1. \u9ED8\u8BA4\u6309\u5929\u5C55\u793A\u5168\u90E8\u4E3B\u9898\u7684\u6D88\u606F\u91CF\u7EA7\u3002<br/>2. \u53EF\u4EE5\u9009\u62E9\u90E8\u5206\u4E3B\u9898\u6765\u5C55\u793A\u6D88\u606F\u91CF\u7EA7\u3002
 kafka.eagle.monitor.produce.topic=\u4E3B\u9898\u540D\u79F0
 kafka.eagle.monitor.produce.trend=\u6570\u636E\u8D8B\u52BF\u9884\u89C8
 
