--- a/efak-web/src/main/resources/i18n/messages_zh_CN.properties
+++ b/efak-web/src/main/resources/i18n/messages_zh_CN.properties
@@ -193,6 +193,11 @@ kafka.eagle.alert.info=\u544A\u8B66\u4FE1\u606F
 kafka.eagle.system=\u7CFB\u7EDF\u8BBE\u7F6E
 kafka.eagle.system.user=\u7528\u6237\u7BA1\u7406
 kafka.eagle.system.role=\u6743\u9650\u5206\u914D
+kafka.eagle.system.job=\u5B9A\u65F6\u4EFB\u52A1
+kafka.eagle.system.job.title=\u5B9A\u65F6\u4EFB\u52A1 - KafkaEagle
+kafka.eagle.system.job.btn=\u589E\u52A0\u4EFB\u52A1
+kafka.eagle.system.job.desc=1. \u5C55\u793A\u5F53\u524D\u7CFB\u7EDF\u7684\u5B9A\u65F6\u4EFB\u52A1\u4FE1\u606F\u3002<br/>2. \u53EF\u4EE5\u9009\u62E9\u90E8\u5206\u4EFB\u52A1\u6765\u4FEE\u6539\u548C\u5220\u9664\u3002
+kafka.eagle.system.job.tr=<th>\u4EFB\u52A1\u7EC4</th><th>\u4EFB\u52A1\u540D\u79F0</th><th>\u6267\u884C\u9891\u7387</th><th>\u521B\u5EFA\u65F6\u95F4</th><th>\u4E0B\u6B21\u89E6\u53D1\u65F6\u95F4</th><th>\u4EFB\u52A1\u72B6\u6001</th><th>\u65F6\u533A</th><th>\u64CD\u4F5C</th>
 kafka.eagle.system.audit=\u5BA1\u8BA1\u65E5\u5FD7
 kafka.eagle.system.audit.desc=1. \u5C55\u793A\u7528\u6237\u8BBF\u95EE\u7CFB\u7EDF\u7684\u76EE\u5F55\u53CA\u64CD\u4F5C\u3002<br/>2. \u53EF\u4EE5\u9009\u62E9\u4E3B\u673A\u5730\u5740\u6765\u7B5B\u9009\u90E8\u5206\u8BBF\u95EE\u76EE\u5F55\u53CA\u7528\u6237\u64CD\u4F5C\u3002
 kafka.eagle.system.audit.title=\u5BA1\u8BA1\u65E5\u5FD7 - KafkaEagle
