add consumer group detail table

--- a/efak-web/src/main/resources/i18n/messages_zh_CN.properties
+++ b/efak-web/src/main/resources/i18n/messages_zh_CN.properties
@@ -156,6 +156,9 @@ kafka.eagle.consumers.group.active=\u6D3B\u8DC3\u6D88\u8D39\u8005
 kafka.eagle.consumers.group.topology=\u4E3B\u9898\u5173\u7CFB\u62D3\u6251\u56FE
 
 kafka.eagle.consumers.group.detail=\u5E94\u7528\u8BE6\u60C5
+kafka.eagle.consumers.group.detail.title=\u5E94\u7528\u8BE6\u60C5 - KafkaEagle
+kafka.eagle.consumers.group.detail.desc=1. \u5C55\u793A\u5F53\u524D\u96C6\u7FA4\u6D88\u8D39\u8005\u7EC4\u4FE1\u606F\u3002<br/>2. \u70B9\u51FB\u6D88\u8D39\u8005\u7EC4\u8D85\u94FE\u63A5\u67E5\u770B\u4E3B\u9898\u6D88\u8D39\u8BE6\u60C5\u3002
+kafka.eagle.consumers.group.detail.tr=<th>\u6D88\u8D39\u8005\u7EC4</th><th>\u6D88\u8D39\u4E3B\u9898</th><th>\u534F\u8C03\u5668\u5730\u5740</th><th>\u6D88\u8D39\u8005\u7EC4\u72B6\u6001</th><th>\u6D88\u8D39\u8005\u5B9E\u4F8B</th><th>\u6D88\u8D39\u4E3B\u9898\u72B6\u6001</th>
 
 
 # Clusters
