add consumer offset table

--- a/efak-web/src/main/resources/i18n/messages_zh_CN.properties
+++ b/efak-web/src/main/resources/i18n/messages_zh_CN.properties
@@ -159,6 +159,10 @@ kafka.eagle.consumers.group.detail=\u5E94\u7528\u8BE6\u60C5
 kafka.eagle.consumers.group.detail.title=\u5E94\u7528\u8BE6\u60C5 - KafkaEagle
 kafka.eagle.consumers.group.detail.desc=1. \u5C55\u793A\u5F53\u524D\u96C6\u7FA4\u6D88\u8D39\u8005\u7EC4\u4FE1\u606F\u3002<br/>2. \u70B9\u51FB\u6D88\u8D39\u8005\u7EC4\u8D85\u94FE\u63A5\u67E5\u770B\u4E3B\u9898\u6D88\u8D39\u8BE6\u60C5\u3002
 kafka.eagle.consumers.group.detail.tr=<th>\u6D88\u8D39\u8005\u7EC4</th><th>\u6D88\u8D39\u4E3B\u9898</th><th>\u534F\u8C03\u5668\u5730\u5740</th><th>\u6D88\u8D39\u8005\u7EC4\u72B6\u6001</th><th>\u6D88\u8D39\u8005\u5B9E\u4F8B</th><th>\u6D88\u8D39\u4E3B\u9898\u72B6\u6001</th>
+kafka.eagle.consumers.group.offset.title=\u6D88\u8D39\u8BE6\u60C5 - KafkaEagle
+kafka.eagle.consumers.group.offset=\u6D88\u8D39\u8BE6\u60C5
+kafka.eagle.consumers.group.offset.desc=1. \u5C55\u793A\u5F53\u524D\u96C6\u7FA4\u6D88\u8D39\u8005\u8BE6\u60C5\u4FE1\u606F\u3002<br/>2. \u82E5\u6D88\u606F\u79EF\u538B\u91CF\u6301\u7EED\u589E\u52A0\u8BF4\u660E\u6D88\u8D39\u8005\u7EC4\u6D88\u8D39\u80FD\u529B\u4E0D\u8DB3\uFF0C\u9700\u8981\u6269\u5BB9\u6D88\u8D39\u8005\u7EC4\u3002
+kafka.eagle.consumers.group.offset.tr=<th>\u6D88\u8D39\u8005\u7EC4</th><th>\u6D88\u8D39\u4E3B\u9898</th><th>\u5206\u533AID</th><th>\u6D88\u606F\u603B\u8BB0\u5F55</th><th>\u6D88\u606F\u504F\u79FB\u91CF</th><th>\u6D88\u606F\u79EF\u538B\u91CF</th>
 
 
 # Clusters
