add offset chart view

--- a/efak-web/src/main/resources/i18n/messages_zh_CN.properties
+++ b/efak-web/src/main/resources/i18n/messages_zh_CN.properties
@@ -163,6 +163,19 @@ kafka.eagle.consumers.group.offset.title=\u6D88\u8D39\u8BE6\u60C5 - KafkaEagle
 kafka.eagle.consumers.group.offset=\u6D88\u8D39\u8BE6\u60C5
 kafka.eagle.consumers.group.offset.desc=1. \u5C55\u793A\u5F53\u524D\u96C6\u7FA4\u6D88\u8D39\u8005\u8BE6\u60C5\u4FE1\u606F\u3002<br/>2. \u82E5\u6D88\u606F\u79EF\u538B\u91CF\u6301\u7EED\u589E\u52A0\u8BF4\u660E\u6D88\u8D39\u8005\u7EC4\u6D88\u8D39\u80FD\u529B\u4E0D\u8DB3\uFF0C\u9700\u8981\u6269\u5BB9\u6D88\u8D39\u8005\u7EC4\u3002
 kafka.eagle.consumers.group.offset.tr=<th>\u6D88\u8D39\u8005\u7EC4</th><th>\u6D88\u8D39\u4E3B\u9898</th><th>\u5206\u533AID</th><th>\u6D88\u606F\u603B\u8BB0\u5F55</th><th>\u6D88\u606F\u504F\u79FB\u91CF</th><th>\u6D88\u606F\u79EF\u538B\u91CF</th>
+kafka.eagle.consumers.group.offset.rate=\u751F\u4EA7\u6D88\u8D39\u901F\u7387
+kafka.eagle.consumers.group.offset.rate.producer=\u751F\u4EA7\u901F\u7387
+kafka.eagle.consumers.group.offset.rate.consumer=\u6D88\u8D39\u901F\u7387
+kafka.eagle.consumers.group.offset.rate.unit=\u6761/\u6BCF\u5206
+kafka.eagle.consumers.group.offset.chart=\u8D8B\u52BF\u56FE\u9884\u89C8
+kafka.eagle.consumers.group.offset.chart.lag=\u79EF\u538B\u6761\u6570
+kafka.eagle.consumers.group.offset.chart.lag.doc=\u7528\u4E8E\u5EA6\u91CF\u76D1\u63A7\u6D88\u606F\u79EF\u538B\u91CF\uFF0C\u6709\u52A9\u4E8E\u8BC6\u522B\u74F6\u9888\u5E76\u4F18\u5316\u6027\u80FD
+kafka.eagle.consumers.group.offset.chart.consumer=\u6D88\u8D39\u6761\u6570
+kafka.eagle.consumers.group.offset.chart.consumer.doc=\u7528\u4E8E\u5EA6\u91CF\u76D1\u63A7\u6D88\u606F\u6D88\u8D39\u901F\u7387\uFF0C\u6709\u52A9\u4E8E\u8BC6\u522B\u74F6\u9888\u5E76\u4F18\u5316\u6027\u80FD
+kafka.eagle.consumers.group.offset.chart.producer=\u751F\u4EA7\u6761\u6570
+kafka.eagle.consumers.group.offset.chart.producer.doc=\u7528\u4E8E\u5EA6\u91CF\u76D1\u63A7\u6D88\u606F\u751F\u4EA7\u901F\u7387\uFF0C\u6709\u52A9\u4E8E\u8BC6\u522B\u74F6\u9888\u5E76\u4F18\u5316\u6027\u80FD
+
+
 
 
 # Clusters
