add kafka mbean check

--- a/efak-web/src/main/resources/i18n/messages_zh_CN.properties
+++ b/efak-web/src/main/resources/i18n/messages_zh_CN.properties
@@ -192,6 +192,10 @@ kafka.eagle.clusters.kafka.tr=<th>\u8282\u70B9ID</th><th>IP</th><th>PORT</th><th
 kafka.eagle.monitor=\u6027\u80FD\u76D1\u63A7
 kafka.eagle.monitor.mbean=MBean
 kafka.eagle.monitor.kafka=Kafka
+kafka.eagle.monitor.kafka.title=Kafka - KafkaEagle
+kafka.eagle.monitor.kafka.desc=1. \u9ED8\u8BA4\u5C55\u793A\u5F53\u5929 Kafka \u96C6\u7FA4\u5404\u9879\u6307\u6807\u8D8B\u52BF\u56FE\u3002<br/>2. \u53EF\u4EE5\u9009\u62E9\u90E8\u5206\u6307\u6807\u6765\u67E5\u770B\u8D8B\u52BF\u56FE\u3002
+kafka.eagle.monitor.kafka.mbean=\u76D1\u63A7\u6307\u6807
+kafka.eagle.monitor.kafka.mbean.chart=\u6307\u6807\u8D8B\u52BF\u9884\u89C8
 kafka.eagle.monitor.produce=\u751F\u4EA7\u8005
 kafka.eagle.monitor.produce.title=\u751F\u4EA7\u8005 - KafkaEagle
 kafka.eagle.monitor.produce.desc=1. \u9ED8\u8BA4\u6309\u5929\u5C55\u793A\u5168\u90E8\u4E3B\u9898\u7684\u6D88\u606F\u91CF\u7EA7\u3002<br/>2. \u53EF\u4EE5\u9009\u62E9\u90E8\u5206\u4E3B\u9898\u6765\u5C55\u793A\u6D88\u606F\u91CF\u7EA7\u3002
