--- a/efak-web/src/main/resources/i18n/messages_zh_CN.properties
+++ b/efak-web/src/main/resources/i18n/messages_zh_CN.properties
@@ -67,9 +67,8 @@ kafka.eagle.dataspace.dashboard.messagein.month=\u6708
 kafka.eagle.dataspace.dashboard.messagein.doc=\u7528\u4E8E\u5EA6\u91CF\u76D1\u63A7\u6D41\u5165\u6D88\u606F\uFF0C\u6709\u52A9\u4E8E\u8BC6\u522B\u74F6\u9888\u5E76\u4F18\u5316\u6027\u80FD
 kafka.eagle.dataspace.dashboard.topic.logsize=\u6D88\u606F\u603B\u8BB0\u5F55\u6570
 kafka.eagle.dataspace.dashboard.topic.logsize.doc=\u7528\u4E8E\u5EA6\u91CF\u76D1\u63A7\u6BCF\u5929\u4E3B\u9898\u5199\u5165\u7684\u603B\u6761\u6570\uFF0C\u6709\u52A9\u4E8E\u9884\u6D4B\u672A\u6765\u7684\u6570\u636E\u589E\u957F\u8D8B\u52BF
-kafka.eagle.dataspace.dashboard.capacity=\u96C6\u7FA4\u5BB9\u91CF
-kafka.eagle.dataspace.dashboard.capacity.used=\u5DF2\u4F7F\u7528
-kafka.eagle.dataspace.dashboard.capacity.total=\u603B\u5BB9\u91CF
+kafka.eagle.dataspace.dashboard.capacity=\u96C6\u7FA4\u8D44\u6E90\u4F7F\u7528\u7387
+kafka.eagle.dataspace.dashboard.capacity.total=\u5DF2\u4F7F\u7528\u603B\u5BB9\u91CF
 kafka.eagle.dataspace.dashboard.capacity.user.rate=\u4F7F\u7528\u7387
 kafka.eagle.dataspace.dashboard.topic.title=\u6D3B\u8DC3\u4E3B\u9898\u5360\u6BD4\u91CF
 kafka.eagle.dataspace.dashboard.topic.active=\u6D3B\u8DC3\u4E3B\u9898\u91CF
