add byte in and out rank

--- a/efak-web/src/main/resources/i18n/messages_zh_CN.properties
+++ b/efak-web/src/main/resources/i18n/messages_zh_CN.properties
@@ -244,7 +244,7 @@ kafka.eagle.system.profile.desc=1. \u5C55\u793A\u5F53\u524D\u8D26\u53F7\u7684\u5
 
 # Header
 kafka.eagle.header.quick=\u5FEB\u901F\u5165\u53E3
-kafka.eagle.header.chatgpt=ChatGPT
+kafka.eagle.header.chatgpt=AI\u52A9\u624B
 kafka.eagle.header.profile=\u4E2A\u4EBA\u4E2D\u5FC3
 kafka.eagle.header.calendar=\u91CD\u8981\u4E8B\u9879
 kafka.eagle.header.manager.change=\u591A\u96C6\u7FA4\u7BA1\u7406
