--- a/efak-web/src/main/resources/i18n/messages_zh_CN.properties
+++ b/efak-web/src/main/resources/i18n/messages_zh_CN.properties
@@ -71,9 +71,9 @@ kafka.eagle.dataspace.dashboard.capacity=\u96C6\u7FA4\u8D44\u6E90\u4F7F\u7528\u7
 kafka.eagle.dataspace.dashboard.capacity.total=\u5DF2\u4F7F\u7528\u603B\u5BB9\u91CF
 kafka.eagle.dataspace.dashboard.capacity.user.rate=\u4F7F\u7528\u7387
 kafka.eagle.dataspace.dashboard.topic.title=\u6D3B\u8DC3\u4E3B\u9898\u5360\u6BD4\u91CF
-kafka.eagle.dataspace.dashboard.topic.active=\u6D3B\u8DC3\u4E3B\u9898\u91CF
-kafka.eagle.dataspace.dashboard.topic.standby=\u975E\u6D3B\u8DC3\u4E3B\u9898\u91CF
-kafka.eagle.dataspace.dashboard.topic.table=\u6D88\u606F\u524D10\u540D
+kafka.eagle.dataspace.dashboard.topic.active=\u6D3B\u8DC3\u4E3B\u9898\u6570\u91CF
+kafka.eagle.dataspace.dashboard.topic.standby=\u7A7A\u95F2\u4E3B\u9898\u6570\u91CF
+kafka.eagle.dataspace.dashboard.topic.table=\u4E3B\u9898\u5404\u7EF4\u5EA6\u524D10\u540D
 kafka.eagle.dataspace.dashboard.topic.table.name=\u4E3B\u9898\u540D\u79F0
 kafka.eagle.dataspace.dashboard.topic.table.logsize=\u6D88\u606F\u6570\u91CF
 kafka.eagle.dataspace.dashboard.topic.table.logsize.doc=\u6309\u6570\u91CF\u964D\u5E8F
