add system user

--- a/efak-web/src/main/resources/i18n/messages_zh_CN.properties
+++ b/efak-web/src/main/resources/i18n/messages_zh_CN.properties
@@ -209,12 +209,22 @@ kafka.eagle.plugins.worker=\u5DE5\u4F5C\u5668\u7BA1\u7406
 
 # Alert
 kafka.eagle.alert=\u544A\u8B66\u901A\u77E5
+kafka.eagle.alert.channel=\u544A\u8B66\u6E20\u9053
 kafka.eagle.alert.config=\u544A\u8B66\u89C4\u5219
 kafka.eagle.alert.info=\u544A\u8B66\u4FE1\u606F
 
 # System
 kafka.eagle.system=\u7CFB\u7EDF\u8BBE\u7F6E
 kafka.eagle.system.user=\u7528\u6237\u7BA1\u7406
+kafka.eagle.system.user.title=\u7528\u6237\u7BA1\u7406 - KafkaEagle
+kafka.eagle.system.user.desc=1. \u5C55\u793A\u5F53\u524D\u7CFB\u7EDF\u7684\u7528\u6237\u4FE1\u606F\u3002<br/>2. \u53EF\u4EE5\u641C\u7D22\u7528\u6237\u540D\u6765\u4FEE\u6539\u548C\u5220\u9664\u7528\u6237\u4FE1\u606F\u3002
+kafka.eagle.system.user.btn=\u6DFB\u52A0\u7528\u6237
+kafka.eagle.system.user.tr=<th>\u7528\u6237ID</th><th>\u7528\u6237\u540D</th><th>\u5BC6\u7801</th><th>\u89D2\u8272</th><th>\u66F4\u65B0\u65F6\u95F4</th><th>\u64CD\u4F5C</th>
+kafka.eagle.system.user.btn.add=\u6DFB\u52A0\u7528\u6237 (<code>*</code>\u4E3A\u5FC5\u586B\u9879)
+kafka.eagle.system.user.name=\u7528\u6237\u540D
+kafka.eagle.system.user.password=\u5BC6\u7801
+kafka.eagle.system.user.role=\u89D2\u8272
+kafka.eagle.system.user.btn.edit=\u7F16\u8F91\u7528\u6237 (<code>*</code>\u4E3A\u5FC5\u586B\u9879)
 kafka.eagle.system.role=\u6743\u9650\u5206\u914D
 kafka.eagle.system.job=\u5B9A\u65F6\u4EFB\u52A1
 kafka.eagle.system.job.title=\u5B9A\u65F6\u4EFB\u52A1 - KafkaEagle
