--- a/efak-web/src/main/resources/i18n/messages_zh_CN.properties
+++ b/efak-web/src/main/resources/i18n/messages_zh_CN.properties
@@ -209,7 +209,12 @@ kafka.eagle.plugins.worker=\u5DE5\u4F5C\u5668\u7BA1\u7406
 
 # Alert
 kafka.eagle.alert=\u544A\u8B66\u901A\u77E5
+kafka.eagle.alert.title=\u544A\u8B66\u901A\u77E5 - KafkaEagle
 kafka.eagle.alert.channel=\u544A\u8B66\u6E20\u9053
+kafka.eagle.alert.channel.desc=1. \u5C55\u793A\u5F53\u524D\u7CFB\u7EDF\u7684\u53EF\u7528\u7684\u544A\u8B66\u6E20\u9053\u3002<br/>2. \u53EF\u4EE5\u641C\u7D22\u544A\u8B66\u6E20\u9053\u540D\u6765\u4FEE\u6539\u548C\u5220\u9664\u5185\u5BB9\u4FE1\u606F\u3002
+kafka.eagle.alert.channel.btn=\u589E\u52A0\u6E20\u9053
+kafka.eagle.alert.channel.tr=<th>ID</th><th>\u540D\u79F0</th><th>\u7C7B\u578B</th><th>URL</th><th>\u8BA4\u8BC1\u4FE1\u606F</th><th>\u66F4\u65B0\u65F6\u95F4</th><th>\u64CD\u4F5C</th>
+
 kafka.eagle.alert.config=\u544A\u8B66\u89C4\u5219
 kafka.eagle.alert.info=\u544A\u8B66\u4FE1\u606F
 
