add alert channel

--- a/efak-web/src/main/resources/i18n/messages_zh_CN.properties
+++ b/efak-web/src/main/resources/i18n/messages_zh_CN.properties
@@ -214,7 +214,14 @@ kafka.eagle.alert.channel=\u544A\u8B66\u6E20\u9053
 kafka.eagle.alert.channel.desc=1. \u5C55\u793A\u5F53\u524D\u7CFB\u7EDF\u7684\u53EF\u7528\u7684\u544A\u8B66\u6E20\u9053\u3002<br/>2. \u53EF\u4EE5\u641C\u7D22\u544A\u8B66\u6E20\u9053\u540D\u6765\u4FEE\u6539\u548C\u5220\u9664\u5185\u5BB9\u4FE1\u606F\u3002
 kafka.eagle.alert.channel.btn=\u589E\u52A0\u6E20\u9053
 kafka.eagle.alert.channel.tr=<th>ID</th><th>\u540D\u79F0</th><th>\u7C7B\u578B</th><th>URL</th><th>\u8BA4\u8BC1\u4FE1\u606F</th><th>\u66F4\u65B0\u65F6\u95F4</th><th>\u64CD\u4F5C</th>
-
+kafka.eagle.alert.channel.btn.add=\u6DFB\u52A0\u6E20\u9053 (<code>*</code>\u4E3A\u5FC5\u586B\u9879)
+kafka.eagle.alert.channel.name=\u540D\u79F0 (<code>*</code>)
+kafka.eagle.alert.channel.type=\u7C7B\u578B (<code>*</code>)
+kafka.eagle.alert.channel.url=\u5730\u5740 (<code>*</code>)
+kafka.eagle.alert.channel.view=\u5B8C\u6574\u4FE1\u606F
+kafka.eagle.alert.channel.auth.json=\u8BA4\u8BC1\u4FE1\u606F
+kafka.eagle.alert.channel.btn.edit=\u7F16\u8F91\u6E20\u9053 (<code>*</code>\u4E3A\u5FC5\u586B\u9879)
+kafka.eagle.alert.channel.btn.view=\u67E5\u770B\u660E\u7EC6
 kafka.eagle.alert.config=\u544A\u8B66\u89C4\u5219
 kafka.eagle.alert.info=\u544A\u8B66\u4FE1\u606F
 
