--- a/efak-web/src/main/resources/i18n/messages_zh_CN.properties
+++ b/efak-web/src/main/resources/i18n/messages_zh_CN.properties
@@ -209,7 +209,7 @@ kafka.eagle.plugins.worker=\u5DE5\u4F5C\u5668\u7BA1\u7406
 
 # Alert
 kafka.eagle.alert=\u544A\u8B66\u901A\u77E5
-kafka.eagle.alert.title=\u544A\u8B66\u901A\u77E5 - KafkaEagle
+kafka.eagle.alert.title=\u544A\u8B66\u6E20\u9053 - KafkaEagle
 kafka.eagle.alert.channel=\u544A\u8B66\u6E20\u9053
 kafka.eagle.alert.channel.desc=1. \u5C55\u793A\u5F53\u524D\u7CFB\u7EDF\u7684\u53EF\u7528\u7684\u544A\u8B66\u6E20\u9053\u3002<br/>2. \u53EF\u4EE5\u641C\u7D22\u544A\u8B66\u6E20\u9053\u540D\u6765\u4FEE\u6539\u548C\u5220\u9664\u5185\u5BB9\u4FE1\u606F\u3002
 kafka.eagle.alert.channel.btn=\u589E\u52A0\u6E20\u9053
@@ -222,7 +222,22 @@ kafka.eagle.alert.channel.view=\u5B8C\u6574\u4FE1\u606F
 kafka.eagle.alert.channel.auth.json=\u8BA4\u8BC1\u4FE1\u606F
 kafka.eagle.alert.channel.btn.edit=\u7F16\u8F91\u6E20\u9053 (<code>*</code>\u4E3A\u5FC5\u586B\u9879)
 kafka.eagle.alert.channel.btn.view=\u67E5\u770B\u660E\u7EC6
-kafka.eagle.alert.config=\u544A\u8B66\u89C4\u5219
+kafka.eagle.alert.rule=\u544A\u8B66\u89C4\u5219
+kafka.eagle.alert.rule.title=\u544A\u8B66\u89C4\u5219 - KafkaEagle
+kafka.eagle.alert.rule.desc=1. \u5C55\u793A\u5F53\u524D\u7CFB\u7EDF\u5DF2\u914D\u7F6E\u7684\u544A\u8B66\u89C4\u5219\u3002<br/>2. \u53EF\u4EE5\u641C\u7D22\u544A\u8B66\u89C4\u5219\u540D\u79F0\u6765\u4FEE\u6539\u548C\u5220\u9664\u5185\u5BB9\u4FE1\u606F\u3002
+kafka.eagle.alert.rule.btn=\u521B\u5EFA\u89C4\u5219
+kafka.eagle.alert.rule.tr=<th>ID</th><th>\u544A\u8B66\u540D\u79F0</th><th>\u544A\u8B66\u7EA7\u522B</th><th>\u76D1\u63A7\u7C7B\u578B</th><th>\u89E6\u53D1\u6761\u4EF6</th><th>\u544A\u8B66\u9891\u7387</th><th>\u72B6\u6001</th><th>\u66F4\u65B0\u65F6\u95F4</th><th>\u64CD\u4F5C</th>
+kafka.eagle.alert.rule.wizard.one=\u57FA\u7840\u4FE1\u606F
+kafka.eagle.alert.rule.wizard.one.name=\u89C4\u5219\u540D\u79F0
+kafka.eagle.alert.rule.wizard.one.frequency=\u544A\u8B66\u9891\u7387
+kafka.eagle.alert.rule.wizard.one.frequency.unit=\u5206\u949F
+kafka.eagle.alert.rule.wizard.one.severity=\u544A\u8B66\u7EA7\u522B
+kafka.eagle.alert.rule.wizard.one.severity.1=\u4E00\u822C
+kafka.eagle.alert.rule.wizard.one.severity.2=\u91CD\u8981
+kafka.eagle.alert.rule.wizard.one.severity.3=\u6781\u91CD\u8981
+kafka.eagle.alert.rule.wizard.two=\u6761\u4EF6\u8BBE\u7F6E
+kafka.eagle.alert.rule.wizard.three=\u89C4\u5219\u9884\u89C8
+kafka.eagle.alert.rule.wizard.four=\u6D88\u606F\u901A\u77E5
 kafka.eagle.alert.info=\u544A\u8B66\u4FE1\u606F
 
 # System
