--- a/efak-web/src/main/resources/i18n/messages_zh_CN.properties
+++ b/efak-web/src/main/resources/i18n/messages_zh_CN.properties
@@ -236,6 +236,10 @@ kafka.eagle.alert.rule.wizard.one.severity.1=\u4E00\u822C
 kafka.eagle.alert.rule.wizard.one.severity.2=\u91CD\u8981
 kafka.eagle.alert.rule.wizard.one.severity.3=\u6781\u91CD\u8981
 kafka.eagle.alert.rule.wizard.two=\u6761\u4EF6\u8BBE\u7F6E
+kafka.eagle.alert.rule.wizard.two.type=\u76D1\u63A7\u7C7B\u578B
+kafka.eagle.alert.rule.wizard.two.metric=\u76D1\u63A7\u6307\u6807
+kafka.eagle.alert.rule.wizard.two.operator=\u5224\u65AD\u6761\u4EF6
+kafka.eagle.alert.rule.wizard.two.value=\u9608\u503C
 kafka.eagle.alert.rule.wizard.three=\u89C4\u5219\u9884\u89C8
 kafka.eagle.alert.rule.wizard.four=\u6D88\u606F\u901A\u77E5
 kafka.eagle.alert.info=\u544A\u8B66\u4FE1\u606F
